last changes from aska

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
